bin_PROGRAMS = $(top_builddir)/bin/dbalance

__top_builddir__bin_dbalance_CFLAGS  = $(AM_CFLAGS) $(COLLECTIONS_CFLAGS) $(XTD_CFLAGS) $(CSV2_CFLAGS)
__top_builddir__bin_dbalance_LDFLAGS = $(AM_LDFLAGS)
__top_builddir__bin_dbalance_LDADD   = $(COLLECTIONS_LIBS) $(XTD_LIBS) $(CSV2_LIBS)
__top_builddir__bin_dbalance_SOURCES = dbalance.c

